# starkverifier

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stylus-address.txt  vitest.config.ts
.github/workflows/: ci.yml
app/: layout.tsx  page.tsx  providers.tsx
benchmark/: .gitignore  run-benchmark.sh
benchmark/sp1-sharpe/program/: Cargo.toml
benchmark/sp1-sharpe/program/src/: main.rs
benchmark/sp1-sharpe/script/: Cargo.toml
benchmark/sp1-sharpe/script/src/: main.rs
benchmark/stark-bench/: Cargo.toml
benchmark/stark-bench/src/: main.rs
components/: AgentCard.tsx  AgentDashboard.tsx  BenchmarkTable.tsx  ConnectWallet.tsx  GasComparison.tsx  ProofPipeline.tsx  StarkPipeline.tsx  VerifyPanel.tsx  WalletProver.tsx
contracts/solidity/script/: DeployRegistry.s.sol
contracts/solidity/src/: EvaluationRegistry.sol  SP1SharpeVerifier.sol
contracts/solidity/test/: EvaluationRegistry.t.sol  SP1SharpeVerifier.t.sol
contracts/stylus/: Cargo.toml  Stylus.toml
contracts/stylus/src/: field.rs  lib.rs  merkle.rs  mpt.rs
contracts/stylus/src/poseidon/: constants.rs  field.rs  mod.rs
contracts/stylus/src/stark/: air.rs  btc_air.rs  channel.rs  domain.rs  fri.rs  mod.rs  proof.rs  sharpe_air.rs
contracts/stylus/tools/: gen_constants.py
lib/: benchmark-data.ts  bot-data.ts  chains.ts  contracts.ts  gas-context.tsx  gas-utils.ts  gmx-fetcher.ts  gmx-trades.ts  receipt-proof.ts  receipt-trie.ts  rlp.ts  wasm-prover.ts
lib/__tests__/: receipt-trie.test.ts  rlp.test.ts
patches/: thirdweb@5.116.1.patch
prover/: Cargo.toml
prover/pkg/: stark_prover.d.ts  stark_prover.js  stark_prover_bg.wasm  stark_prover_bg.wasm.d.ts
prover/src/: btc_compose.rs  btc_trace.rs  channel.rs  commit.rs  compose.rs  domain.rs  field.rs  fri.rs  gmx_fetcher.rs  keccak.rs  lib.rs  main.rs  mock_data.rs  poseidon.rs  proof.rs  receipt_proof.rs  sharpe_compose.rs  sharpe_trace.rs  trace.rs  wasm.rs
prover/src/poseidon/: constants.rs
public/: proof.json  sharpe-proof-bot-a.json  sharpe-proof-bot-b.json  stark_prover_bg.wasm
scripts/: build-wasm.sh
