[package]
name = "stark-prover"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Off-chain STARK prover for Fibonacci computation (generates proofs for on-chain verification)"

[dependencies]
# Share field arithmetic and Poseidon with the on-chain verifier
alloy-primitives = { version = "0.8", default-features = false, features = ["std"] }
ruint = "=1.12.3"
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
