[package]
name = "stark-prover"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Off-chain STARK prover for Fibonacci computation (generates proofs for on-chain verification)"

[lib]
name = "stark_prover"
path = "src/lib.rs"

[[bin]]
name = "stark-prover"
path = "src/main.rs"

[features]
default = ["cli"]
cli = ["clap"]
wasm = ["wasm-bindgen", "js-sys", "getrandom"]

[dependencies]
# Share field arithmetic and Poseidon with the on-chain verifier
alloy-primitives = { version = "0.8", default-features = false }
ruint = "=1.12.3"
hex = "0.4.3"

# CLI-only dependencies
clap = { version = "4", features = ["derive"], optional = true }

# WASM-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
