[package]
name = "stark-prover"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Off-chain STARK prover for Fibonacci computation (generates proofs for on-chain verification)"

[lib]
name = "stark_prover"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bin]]
name = "stark-prover"
path = "src/main.rs"

[features]
default = ["cli"]
cli = ["clap", "dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json", "dep:alloy-sol-types"]
wasm = ["wasm-bindgen", "js-sys", "getrandom"]

[dependencies]
# Share field arithmetic with the on-chain verifier
alloy-primitives = { version = "0.8", default-features = false }
ruint = "=1.12.3"
hex = "0.4.3"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# CLI-only dependencies
clap = { version = "4", features = ["derive"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
alloy-sol-types = { version = "0.8", optional = true }

# WASM-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
