[package]
name = "stark-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
stark-prover = { path = "../../prover", default-features = false }
alloy-primitives = { version = "0.8", default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
